--- a/src/style.css
+++ b/src/style.css
@@ -175,4 +175,36 @@ section:target h1, h2 {
   100% {
     opacity: .8;
   }
- 
+ .footer {
+  position: fixed;
+  font-family: "Oswald", sans-serif;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: transparent;
+  text-align: center;
+  color: #f4f4f4;
+  
+}
+
+.icons {
+  padding-top: 1rem;
+}
+.icons a:hover {
+  color: red;
+}
+
+.icons a {
+  text-decoration: none;
+  font-size: 2rem;
+  margin: 0.5rem;
+  color: #f4f4f4;
+}
+
+.company-name {
+  font-size: 1rem;
+  text-transform: uppercase;
+  margin-top: 0.5rem;
+  font-family: "Oswald", sans-serif;
+  margin-bottom: 2.5em;
+}
