--- a/src/min.style.css
+++ b/src/min.style.css
@@ -715,14 +715,15 @@ body {
 }
 
 .my-nav {
-  position: fixed;
+  position: absolute;
   display: flex;
-  top: 8%;
+  top: 6%;
 }
 
 .my-nav ul {
   list-style-type: none;
   padding: 0;
+  padding-left: 5px;
   transform: translatex(-270px);
 }
 
@@ -773,9 +774,9 @@ body {
   background-color: white;
   padding: 10px;
   border-radius: 50%;
-  width: 38px;
-  height: 38px;
-  font-size: 18px;
+  width: 45px;
+  height: 45px;
+  font-size: 20px;
   transform: rotate(0deg);
 }
 
