--- a/src/min.style.css
+++ b/src/min.style.css
@@ -745,7 +745,7 @@ body {
 }
 
 .my-nav ul li {
-  display: block;
+  display: inlin-block;
   margin: 30px;
   background-color: rgba(0, 0, 0, 0);
   width: 300px;
