--- a/creativemedia/live/src/style.css
+++ b/creativemedia/live/src/style.css
@@ -25,7 +25,7 @@ body {
 
 #banner {
   border-bottom: 1px solid #fff;
-  background-color: #1eabe3;
+  background-color: rgba(44, 131, 185, 1); /*#1eabe3;*/
   width: 100%;
 }
 
