--- a/creativemedia/live/src/style.css
+++ b/creativemedia/live/src/style.css
@@ -24,7 +24,7 @@ body {
 
 #banner {
   border-bottom: 1px solid #fff;
-  background-color: #1b2735; /*#1eabe3;*/
+  background-color: #090a0f; /*#1eabe3;*/
   width: 100%;
 }
 
