--- a/creativemedia/live/src/style.css
+++ b/creativemedia/live/src/style.css
@@ -86,11 +86,12 @@ table-area {
   z-index: 0;
   margin-top: 0px;
 }
-
+/*
 .dataTables_wrapper .dataTables_length,
 .dataTables_wrapper .dataTables_filter {
   color: red !important;
   }
+*/
 .dataTables_wrapper .dataTables_info {
   color: white !important;
   }
