--- a/src/min.style.css
+++ b/src/min.style.css
@@ -18,7 +18,7 @@ body {
   display: flex;
   height: 100vh;
   width: 100%;  
-  background-image: url("https://raw.githubusercontent.com/donelfantastic/donelfantastic.github.io/main/assets/donelfantastic1.png");
+  background-image: url("https://donelfantastic.github.io/assets/donelfantastic8.jpg");
   animation-delay: 20s;
   background-size: cover;
   background-position: center;
