--- a/src/latest/style.css
+++ b/src/latest/style.css
@@ -17,9 +17,11 @@ body {
 
 video {
   -o-object-fit: fill cover;
-     object-fit: fill cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
   min-width: 100%;
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 .hint {
