--- a/src/latest/style.css
+++ b/src/latest/style.css
@@ -411,22 +411,27 @@ video {
 
 h5 {
   color: white;
-  margin-left: 15px;
-  letter-spacing: 1px;
   cursor: pointer;  
   }
 
 .df_title {
+  border-radius: 26.5px;
+  background-color: #001f61;
+  border: 1px solid #001f61;
+  box-shadow: 0 16px 22px -17px #03153b;
+  font-size: 22px;
   color: white;
+  text-align: center;
   margin-left: 15px;
+  margin-right: 15px;
   margin-top:150px;
-  font-size: 18px;
-  margin-left: 15px;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
   cursor: pointer;  
   }
 
 p {
+  font-family: "Muli";
+  font-size: 12px;
   color: white;
   margin-left: 15px;
   letter-spacing: 1px;
