--- a/src/latest/style.css
+++ b/src/latest/style.css
@@ -1,37 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:300,700&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Josefin+Slab&display=swap");
-html {
-  padding: 0;
-  margin: 0;
-  height: 100%;
-  box-sizing: border-box;
-}
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-a:link {
-  text-decoration: none;
-}
-body {
-  position: relative;
-  font-family: "Roboto Condensed";
-  margin: 0;
-  padding: 0;
-  padding-bottom: 6rem;
-  min-height: 100%;
-  background: #1a1717;
-  color: rgb(243, 239, 239);
-}
-/*
 body {
   margin: 0;
   padding: 0;
   background: #1a1717;
   color: rgb(243, 239, 239);
 }
-*/
+
 .bg-video-wrap {
   position: relative;
   overflow: hidden;
@@ -54,7 +29,7 @@ video {
   color: rgba(255, 255, 255, 0.8);
   font-size: 22px;
   font-weight: 700;
-  position: fixed;/*absolute*/
+  position: absolute;
   left: 75px;
   top: 20px;
   letter-spacing: 1.2px;
@@ -65,7 +40,7 @@ video {
   width: 48px;
   height: 48px;
   background: #001f61;
-  position: fixed;/*absolute*/
+  position: absolute;
   border: 1px solid #001f61;
   box-shadow: 0 16px 22px -17px #03153b;
   top: 30px;
@@ -205,7 +180,7 @@ video {
   border-radius: 25px;
   text-align: center;
   color: #001f61;
-  font-family: "Josefin Slab", serif;
+  font-family: "Roboto Condensed";
   font-size: 22px;
   z-index: 1;
   transition: 0.2s;
