--- a/src/latest/style.css
+++ b/src/latest/style.css
@@ -514,6 +514,19 @@ table-area {
 
 /* POPUP VIDEO CSS */
 .video-popup {
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1202;
+  transition: 0.2s all ease-in-out;
+  display: none;
+}
+
+/*
+.video-popup {
   padding: 0;
   margin: 0;
   width: 100%;
@@ -523,7 +536,7 @@ table-area {
   z-index: 9999;
   display: none;
 }
-
+*/
 .video-popup.show {
   display: flex;
 }
