--- a/src/latest/style.css
+++ b/src/latest/style.css
@@ -670,3 +670,68 @@ background: #1a1717 !important;
   }
 }
 
+/* SLIDE ABOUT US */
+
+[type=radio] {
+  display: none;
+}
+
+#slider {
+  height: 65vw;
+  position: relative;
+  perspective: 1000px;
+  transform-style: preserve-3d;
+}
+
+#slider label {
+  margin: auto;
+  width: 30%;
+  height: 80%;
+  border-radius: 4px;
+  position: absolute;
+  left: 0; right: 0;
+  cursor: pointer;
+  transition: transform 0.4s ease;
+}
+
+#s1:checked ~ #slide4, #s2:checked ~ #slide5,
+#s3:checked ~ #slide1, #s4:checked ~ #slide2,
+#s5:checked ~ #slide3 {
+  box-shadow: 0 1px 4px 0 rgba(0,0,0,.37);
+  transform: translate3d(-50%,0,-200px);
+}
+
+#s1:checked ~ #slide5, #s2:checked ~ #slide1,
+#s3:checked ~ #slide2, #s4:checked ~ #slide3,
+#s5:checked ~ #slide4 {
+  box-shadow: 0 6px 10px 0 rgba(0,0,0,.3), 0 2px 2px 0 rgba(0,0,0,.2);
+  transform: translate3d(-25%,0,-100px);
+}
+
+#s1:checked ~ #slide1, #s2:checked ~ #slide2,
+#s3:checked ~ #slide3, #s4:checked ~ #slide4,
+#s5:checked ~ #slide5 {
+  box-shadow: 0 13px 25px 0 rgba(0,0,0,.3), 0 11px 7px 0 rgba(0,0,0,.19);
+  transform: translate3d(0,0,0);
+}
+
+#s1:checked ~ #slide2, #s2:checked ~ #slide3,
+#s3:checked ~ #slide4, #s4:checked ~ #slide5,
+#s5:checked ~ #slide1 {
+  box-shadow: 0 6px 10px 0 rgba(0,0,0,.3), 0 2px 2px 0 rgba(0,0,0,.2);
+  transform: translate3d(25%,0,-100px);
+}
+
+#s1:checked ~ #slide3, #s2:checked ~ #slide4,
+#s3:checked ~ #slide5, #s4:checked ~ #slide1,
+#s5:checked ~ #slide2 {
+  box-shadow: 0 1px 4px 0 rgba(0,0,0,.37);
+  transform: translate3d(50%,0,-200px);
+}
+
+#slide1 { background: url("https://donelfantastic.github.io/assets/donelfantastic3.jpg")no-repeat center center/cover; }
+#slide2 { background: url("https://donelfantastic.github.io/assets/donelfantastic11.png")no-repeat center center/cover; }
+#slide3 { background: url("https://donelfantastic.github.io/assets/donelfantastic12.png")no-repeat center center/cover; }
+#slide4 { background: url("https://donelfantastic.github.io/assets/donelfantastic13.png")no-repeat center center/cover; }
+#slide5 { background: url("https://donelfantastic.github.io/assets/donelfantastic8.jpg")no-repeat center center/cover; }
+
