--- a/src/latest/style.css
+++ b/src/latest/style.css
@@ -654,11 +654,11 @@ background: #1a1717 !important;
   border: none;
   padding: 5px 18px;
   text-transform: uppercase;
-  font-size: 14px;
-  line-height: 15px;
+  font-size: 12px;
+  line-height: 14px;
   border-radius: 100px;
   cursor: none;
-  margin: 0 5px;
+  margin: 5px 5px;
   transition: 0.3s;
   display: inline-block;
 }
