--- a/src/latest/style.css
+++ b/src/latest/style.css
@@ -662,13 +662,13 @@ background: #1a1717 !important;
     #fc4a1a
   );
   border: none;
-  padding: 4px 18px;
+  padding: 3px 16px;
   text-transform: uppercase;
   font-size: 12px;
   line-height: 14px;
   border-radius: 100px;
   cursor: none;
-  margin: 2px 4px;
+  margin: 2px 3px;
   transition: 0.3s;
   display: inline-block;
 }
@@ -678,7 +678,7 @@ background: #1a1717 !important;
 }
 
 .btn:hover {
-  background-color: red;
+  background-color: gray;
   color: #fff;
 }
 
