--- a/src/latest/style.css
+++ b/src/latest/style.css
@@ -682,6 +682,15 @@ background: #1a1717 !important;
   color: #fff;
 }
 
+#form-div2 {
+	background-color:rgba(72,72,72,0.4);
+	padding: 0px;
+	margin: 0px;
+	position: absolute;
+	width: 100%;
+	height: auto;
+}
+
 @media all and (max-width: 768px) {
   .iframe-wrapper {
     width: 100%;
