--- a/src/latest/style.css
+++ b/src/latest/style.css
@@ -683,9 +683,9 @@ background: #1a1717 !important;
 }
 
 #form-div2 {
-background-color:rgba(72,72,72,0.4);
+background-color:transparent;
 padding: 0px;
-//margin: 0px;
+margin: 0px;
 margin-left: 15px;
 margin-right: 15px;	
 position: absolute;
