--- a/src/latest/style.css
+++ b/src/latest/style.css
@@ -686,9 +686,15 @@ background: #1a1717 !important;
 background-color:transparent;
 padding: 0px;
 margin: 0px;
+border: 1px solid #ffffff;
+border-radius: 26.5px;
+font-size: 22px;
+color: white;
+text-align: center;
 margin-left: 15px;
-margin-right: 15px;	
-position: absolute;
+margin-right: 15px;
+letter-spacing: 2px;
+cursor: none;  
 width: 100%;
 height: auto;
 }
