--- a/src/latest/style.css
+++ b/src/latest/style.css
@@ -420,6 +420,8 @@ video {
 background-color:transparent;
 padding: 0px;
 margin: 0px;
+margin-left: 15px;
+margin-right: 15px;  
 width: 100%;
 height: auto;
 }
@@ -458,12 +460,6 @@ h5 {
   letter-spacing: 2px;
   cursor: none;  
   }
-
-.fb-comments {
-  margin: 0px;
-  padding: 0px;
-  display: flex;
-}
 
 p {
   font-family: "Muli";
