--- a/live/src/latest/style.css
+++ b/live/src/latest/style.css
@@ -527,13 +527,13 @@ span {
 
 /* TABLE */
 table-area {
-  position: relative;
-  z-index: 0;
-  margin-top: 0px;
+position: relative;
+z-index: 0;
+margin-top: 0px;
 }
 
 table tr, table th {
-background: transparent !important;
+background: rgba(192,192,192,0.3) !important;
 }
 
 table td {
