--- a/live/src/latest/style.css
+++ b/live/src/latest/style.css
@@ -533,7 +533,7 @@ margin-top: 0px;
 }
 
 table tr, table th {
-background: rgba(192,192,192,0.3) !important;
+background-color: rgba(192,192,192,0.3);
 }
 
 table td {
