--- a/live/src/latest/style.css
+++ b/live/src/latest/style.css
@@ -537,7 +537,7 @@ background: transparent !important;
 }
 
 table td {
-background: rgba(255,255,255,0.3) !important;/*#1a1717*/
+background: #1a1717 !important;
 }
 
 .dataTables_wrapper .dataTables_length,
