--- a/src/latest/style.css
+++ b/src/latest/style.css
@@ -551,7 +551,7 @@ background: #1a1717 !important;
 
 /* POPUP VIDEO CSS */
 .video-popup {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   background: rgba(0, 0, 0, 0.8);
   position: fixed;
