--- a/src/latest/style.css
+++ b/src/latest/style.css
@@ -421,7 +421,10 @@ background-color:transparent;
 padding: 0px;
 margin: 0px;
 }
-
+.container-fluid {
+  margin: 0;
+  padding: 0;
+}
 h5 {
   color: white;
   //*: 15px;*/
@@ -436,8 +439,8 @@ h5 {
   font-size: 22px;
   color: white;
   text-align: center;
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-left: 30px;
+  margin-right: 30px;
   margin-top:150px;
   letter-spacing: 2px;
   cursor: none;  
