--- a/src/latest/style.css
+++ b/src/latest/style.css
@@ -222,6 +222,10 @@ video {
 }
 
 @media (min-width: 991px) {
+  .bg-video-wrap {
+  width: 100%;
+  height: 100vh;
+  }
   .toggle-nav {
     bottom: unset;
     bottom: auto;
@@ -481,7 +485,7 @@ span {
   color: rgb(243, 8, 118);
 }
 
-@media (min-width: 992px) {
+@media (min-width: 991px) {
   .container-playlist {
     width: 100%;
     padding-left: 8%;
