--- a/src/latest/style.css
+++ b/src/latest/style.css
@@ -221,7 +221,7 @@ video {
   padding: 10px 15px;
 }
 
-@media (min-width: 991px) {
+@media screen and (min-width: 992px) {
   .bg-video-wrap {
   width: 100%;
   height: 100vh;
